# executor-dashboard

./: .gitignore  AUTHORS  ChangeLog  Dockerfile  MANIFEST.in  README.rst  docker-compose.yml  requirements.txt  setup.cfg
docker/conf/: gc3pie.conf  id_rsa  id_rsa.pub  nginx-app.conf  supervisor-app.conf  uwsgi_app.ini
executor/: __init__.py
executor/content/executordashboard/: celery_loader.py  dashboard.py  tasks.py
executor/content/executordashboard/executorpanel/: panel.py  tables.py  tests.py  urls.py  utils.py  views.py
executor/content/executordashboard/executorpanel/templates/executorpanel/: index.html  job_form.html
executor/content/executordashboard/gc3apps/: gndn.py  grayscaler.py
executor/enabled/: _31050_executordashboard.py
executor/local_settings.d/: _9900_executor_settings.docker.py  _9900_executor_settings.py
