[metadata]
name = executor
summary = A panel plugin for OpenStack Dashboard which allows to execute gc3pie tasks
description-file =
    README.rst
author = Alessandro De Carli
author_email = alessandro.decarli@uzh.ch
home-page = http://docs.openstack.org/developer/horizon/
classifiers = [
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[files]
packages =
    executor